--- a/index.css
+++ b/index.css
@@ -7,8 +7,9 @@ body>div {
   margin: 0 auto;
 }
 article {
-  width: 440px;
   font: normal normal normal 12px/16px "Helvetica Neue",Arial,sans-serif;
+  position: absolute; left: 0; top: 50px;
+  width: 440px;
 }
 header {
   font-weight: bold;
@@ -19,7 +20,10 @@ h1 {
 h2 {
   font-size: 15px;
 }
+ul {
+  list-style-type: none;
+}
 .twitter-timeline {
-  position: absolute; top: 0; right: 40px;
+  position: absolute; top: 5%; right: 40px; bottom: 5%;
   width: 300px;
 }
