--- a/index.css
+++ b/index.css
@@ -8,6 +8,9 @@ body>div {
   width: 800px;
   position: relative;
   margin: 0 auto;
+  border: 1px solid #e8e8e8;
+  border-top: 0;
+  border-bottom: 0;
 }
 article {
   font: normal normal normal 12px/16px "Helvetica Neue",Arial,sans-serif;
