--- a/index.css
+++ b/index.css
@@ -11,10 +11,11 @@ body>div {
   border: 1px solid #e8e8e8;
   border-top: 0;
   border-bottom: 0;
+  min-height: 100%;
 }
 article {
   font: normal normal normal 12px/16px "Helvetica Neue",Arial,sans-serif;
-  position: absolute; left: 0; top: 50px;
+  margin-top: 50px;
   width: 440px;
 }
 header {
