--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@ html, body {
 }
 body {
   font-family: sans-serif;
+  background: url('farmer.png');
 }
 body>div {
   width: 800px;
@@ -17,6 +18,7 @@ article {
   font: normal normal normal 12px/16px "Helvetica Neue",Arial,sans-serif;
   padding: 50px 25px;
   width: 400px;
+  background: white;
 }
 header {
   font-weight: bold;
