--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ body>div {
   border-top: 0;
   border-bottom: 0;
   min-height: 100%;
-  background: white;
+  background: rgba(255, 255, 255, 0.1);
 }
 article {
   font: normal normal normal 12px/16px "Helvetica Neue",Arial,sans-serif;
