--- a/index.css
+++ b/index.css
@@ -9,11 +9,11 @@ body>div {
   width: 800px;
   position: relative;
   margin: 0 auto;
-  border: 2px solid #e8e8e8;
+  border: 2px solid #666;
   border-top: 0;
   border-bottom: 0;
   min-height: 100%;
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0.4);
 }
 article {
   font: normal normal normal 12px/16px "Helvetica Neue",Arial,sans-serif;
