--- a/index.css
+++ b/index.css
@@ -9,11 +9,10 @@ body>div {
   width: 800px;
   position: relative;
   margin: 0 auto;
-  border: 2px solid #666;
   border-top: 0;
   border-bottom: 0;
   min-height: 100%;
-  background: rgba(255, 255, 255, 0.4);
+  background: white;
 }
 article {
   font: normal normal normal 12px/16px "Helvetica Neue",Arial,sans-serif;
@@ -33,6 +32,6 @@ ul {
   list-style-type: none;
 }
 .twitter-timeline {
-  position: absolute; top: 5%; right: -1px;
+  position: absolute; top: 5%; right: 0;
   width: 300px;
 }
