--- a/index.css
+++ b/index.css
@@ -1,4 +1,43 @@
-.container-narrow {
-  margin: 0 auto;
-  max-width: 700px;
+html, body {
+  height: 100%;
+}
+.container {
+  max-width: 724px;
+}
+.masthead {
+  padding-top: 20px;
+}
+.footer {
+  margin-top: 50px;
+  background-color: black;
+  color: #aaa;
+  padding: 20px 0;
+}
+.footer i {
+  margin-right: 6px;
+}
+.footer a:hover {
+  color: white;
+}
+.footer .links {
+  margin-top: 15px;
+}
+.footer .container {
+  max-width: 500px;
+}
+@media (max-width: 767px) {
+  .footer {
+    margin-left: -20px;
+    margin-right: -20px;
+    padding-left: 80px;
+    padding-right: 20px;
+  }
+}
+@media (min-width: 767px) and (min-height: 800px) {
+  .footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    min-width: 100%;
+  }
 }
