--- a/index.css
+++ b/index.css
@@ -1,11 +1,23 @@
 html, body {
   height: 100%;
 }
+.masthead {
+  background-color: #4F77B7;
+}
+.masthead h1 text {
+  fill: #fff; stroke: black; stroke-width: 1px;
+}
+.masthead svg {
+  height: 2em;
+}
 .container {
   max-width: 724px;
 }
 .masthead {
   padding-top: 20px;
+}
+.middle {
+  padding-top: 40px;
 }
 .footer {
   padding-top: 90px;
@@ -31,14 +43,11 @@ html, body {
 .footer .links {
   margin-top: 15px;
 }
-.footer .container {
-  max-width: 500px;
-}
 @media (max-width: 767px) {
-  .footer {
+  .masthead, .footer {
     margin-left: -20px;
     margin-right: -20px;
-    padding-left: 80px;
+    padding-left: 20px;
     padding-right: 20px;
   }
 }
