playing with georgia-tech css

--- a/georgia-tech/css/app.css
+++ b/georgia-tech/css/app.css
@@ -1,7 +1,7 @@
 body {
-  background-color: rgb(240, 240, 240);
+  background-color: rgb(245, 245, 245);
   background-image: linear-gradient(90deg, transparent 50%, rgba(255,255,255,.5) 50%);
-  background-size: 4px 50px;
+  background-size: 3px 50px;
 }
 
 .semesters {
@@ -14,17 +14,29 @@ body {
   margin-top: 20px;
 }
 
+.semester>.name {
+  border-width: 0 0 1px 0;
+  border-style: solid;
+  border-color: rgba(0, 0, 0, 0.2);
+}
+
 .course {
   list-style: none;
+  margin-top: 5px;
 }
 
-.course .grade {
+.course>.grade {
   display: inline-block;
-  width: 15px;
-  color: green;
+  width: 20px;
+  color: rgb(70, 120, 70);
 }
 
-.course .number {
+.course>.number {
   display: inline-block;
-  width: 90px;
+  width: 80px;
+  color: rgb(100, 100, 100);
+}
+
+.course>.name {
+  font-size: 1.2em;
 }
