--- a/chris_martin_org/static/base.css
+++ b/chris_martin_org/static/base.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Julius+Sans+One);
+@import url(https://fonts.googleapis.com/css?family=Julius+Sans+One);
 
 html, body {
     height: 100%;
