--- a/index.css
+++ b/index.css
@@ -26,9 +26,8 @@ h3 i { margin-right: 10px; }
 .middle ul { list-style-type: none; margin-left: 0px; }
 .middle ul ul { margin-left: 20px; }
 .middle li { margin: 0 0 10px; }
-section[data-name="work"] b,
-section[data-name="school"] b {
-  display: inline-block; margin-right: 10px;
+section[data-name="timeline"] span {
+  display: inline-block; margin: 0 5px;
 }
 
 h3:before {
@@ -37,8 +36,7 @@ h3:before {
   -webkit-font-smoothing: antialiased; margin-right: 10px;
 }
 
-section[data-name="work"] h3:before { content: "\e10d"; }
-section[data-name="school"] h3:before { content: "\e0f5"; }
+section[data-name="timeline"] h3:before { content: "\e10d"; }
 section[data-name="programming"] h3:before { content: "\e0b1"; }
 section[data-name="tools"] h3:before { content: "\e004"; }
 section[data-name="philosophy"] h3:before { content: "\e085"; }
