--- a/chris_martin_org/templates/base.html
+++ b/chris_martin_org/templates/base.html
@@ -19,7 +19,8 @@
                   fill="url(#header-pattern)"/>
         </svg>
         <div class="container">
-            <h1>Chris Martin</h1>
+            <a href="/"><h1 class="site-title">Chris Martin</h1></a>
+            <h1 class="page-title">{% block page-title %}{% endblock %}</h1>
         </div>
     </header>
     <div class="transition transition-header-middle">
