--- a/chris_martin_org/templates/home.html
+++ b/chris_martin_org/templates/home.html
@@ -4,6 +4,7 @@
 {% block title %}Chris Martin{% endblock %}
 
 {% block extra-head %}
+    {{ block.super }}
     <link href="{% static 'home.css' %}" rel="stylesheet"/>
 {% endblock %}
 
