don't have scrollbars on all code

--- a/assets/main.css
+++ b/assets/main.css
@@ -250,7 +250,7 @@ a.site-title:hover {
   -moz-border-radius: 3px;
   border-radius: 3px;
   font-size: 15px;
-  overflow:scroll;
+  overflow-x: auto;
 }
 
 .post code { padding: 1px 5px; }
