--- a/in/home/home.scss
+++ b/in/home/home.scss
@@ -8,7 +8,7 @@
 .post {
   border-bottom: 1px solid darkgray;
   margin: 1em 0;
-  padding-bottom: 1em;
+  padding-bottom: 0.5em;
 
   .head {
     display: inline-block;
@@ -28,7 +28,8 @@
     }
   }
 
-  .description {
-
+  .abstract {
+    text-align: justify;
+    padding: 0 10px;
   }
 }
