--- a/in/global.scss
+++ b/in/global.scss
@@ -1,9 +1,27 @@
 body {
   margin: 0;
-  padding: 0;
+  padding: 0 0 5em;
+}
+
+a {
+  color: #0a64bc;
+  &:hover { color: #4999e0; }
+  text-decoration: none;
 }
 
 .container {
-  padding: 0 20px;
+  padding: 0 2em;
   margin: 0 auto;
+}
+
+.global-page-header {
+  min-height: 2em;
+  border-bottom: 2px solid black;
+  background-color: #333;
+  line-height: 2em;
+
+  a {
+    color: white;
+    text-decoration: none;
+  }
 }
