--- a/in/posts/post.scss
+++ b/in/posts/post.scss
@@ -4,6 +4,25 @@
   max-width: 35em;
 }
 
+.post-head {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  margin-bottom: 2em;
+  border-bottom: 1px solid darkgray;
+}
+
+.post-title {
+  flex: 1;
+  margin-bottom: 0;
+}
+
+.post-date {
+  white-space: nowrap;
+  color: darkgray;
+}
+
 .post-body {
   text-align: justify;
 }
