--- a/in/posts/2013-12-georgia-tech/georgia-tech.scss
+++ b/in/posts/2013-12-georgia-tech/georgia-tech.scss
@@ -2,21 +2,19 @@
 
 .course {
   list-style: none;
-  margin-top: 5px;
+  margin-top: 0.5em;
 
   .grade {
     display: inline-block;
-    width: 40px;
+    width: 2em;
     color: rgb(70, 120, 70);
+    font-size: 75%;
   }
 
   .number {
     display: inline-block;
-    width: 100px;
+    width: 6em;
     color: rgb(100, 100, 100);
-  }
-
-  .name {
-    font-size: 120%;
+    font-size: 75%;
   }
 }
