--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,7 +30,7 @@
           </a>
         </div>
         <p class="text site-description">
-          <a href="http://coffee.foldapp.com/">Fold</a>,
+          <a href="https://fluent.network/">Fluent</a>,
           Scala, Haskell, complaining
         </p>
       </span>
