add Nix to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,7 +31,7 @@
         </div>
         <p class="text site-description">
           <a href="https://fluent.network/">Fluent</a>,
-          Scala, Haskell, complaining
+          Nix, Scala, Haskell, complaining
         </p>
       </span>
 
