--- a/in/home/home.scss
+++ b/in/home/home.scss
@@ -9,6 +9,11 @@ h1 {
   border-bottom: 1px solid darkgray;
 }
 
+.photo {
+  width: 150px;
+  border-radius: 5px;
+}
+
 .post {
   border-bottom: 1px solid darkgray;
   margin: 1em 0;
