--- a/in/global.scss
+++ b/in/global.scss
@@ -1,35 +1,57 @@
 body {
-  margin: 0;
-  padding: 0 0 5em;
+    margin: 0;
+    padding: 0 0 5em;
 }
 
 a {
-  color: #0a64bc;
-  &:hover { color: #4999e0; }
-  text-decoration: none;
+    color: #0a64bc;
+    &:hover { color: #4999e0; }
+    text-decoration: none;
 }
 
 h1 {
-  margin-top: 1em;
+    margin-top: 1em;
 }
 
 .container {
-  padding: 0 2em;
-  margin: 0 auto;
+    padding: 0 2em;
+    margin: 0 auto;
 }
 
 .global-page-header {
-  min-height: 2em;
-  border-bottom: 2px solid black;
-  background-color: #333;
-  line-height: 2em;
+    min-height: 2em;
+    border-bottom: 2px solid black;
+    background-color: #333;
+    line-height: 2em;
 
-  a {
-    color: white;
-    text-decoration: none;
-  }
+    a {
+        color: white;
+        text-decoration: none;
+    }
 }
 
-code {
-  word-break: break-all;
+div.sourceCode {
+
+    border: 3px solid #f1f1f1;
+    border-radius: 5px;
+    margin: 0.5em;
+    padding-left: 1em;
+    word-break: break-all;
+    line-height: 1.2em;
+
+    p {
+        margin: 0;
+    }
+
+    span {
+        &.kw, &.ot       { color: #007020; }
+        &.fu             { color: #06287e; }
+        &.co             { color: #60a0b0; }
+        &.dt             { color: #902000; }
+        &.ch, &.st       { color: #4070a0; }
+        &.bn, &.dv, &.fl { color: #40a070; }
+        &.al, &.er       { color: red; }
+        &.al, &.er, &.kw { font-weight: bold; }
+        &.co             { font-style: italic; }
+    }
 }
