--- a/in/global.scss
+++ b/in/global.scss
@@ -1,3 +1,5 @@
+$container-width: 560px;
+
 body {
     margin: 0;
     padding: 0 0 5em;
@@ -16,6 +18,7 @@ h1 {
 .container {
     padding: 0 2em;
     margin: 0 auto;
+    max-width: $container-width;
 }
 
 .global-page-header {
@@ -32,26 +35,43 @@ h1 {
 
 div.sourceCode {
 
-    border: 3px solid #f1f1f1;
-    border-radius: 5px;
-    margin: 0.5em;
-    padding-left: 1em;
-    word-break: break-all;
-    line-height: 1.2em;
+    box-sizing: border-box;
+    padding: 0 1.5em;
 
-    p {
-        margin: 0;
+    pre {
+        box-sizing: border-box;
+        display: inline-block;
+        min-width: 100%;
+        border: 3px solid #f1f1f1;
+        border-radius: 5px;
+        padding: 1em;
+        word-break: break-all;
+        line-height: 1.2em;
+
+        p {
+            margin: 0;
+        }
+
+        span {
+            &.kw, &.ot       { color: #007020; }
+            &.fu             { color: #06287e; }
+            &.co             { color: #60a0b0; }
+            &.dt             { color: #902000; }
+            &.ch, &.st       { color: #4070a0; }
+            &.bn, &.dv, &.fl { color: #40a070; }
+            &.al, &.er       { color: red; }
+            &.al, &.er, &.kw { font-weight: bold; }
+            &.co             { font-style: italic; }
+        }
     }
+}
 
-    span {
-        &.kw, &.ot       { color: #007020; }
-        &.fu             { color: #06287e; }
-        &.co             { color: #60a0b0; }
-        &.dt             { color: #902000; }
-        &.ch, &.st       { color: #4070a0; }
-        &.bn, &.dv, &.fl { color: #40a070; }
-        &.al, &.er       { color: red; }
-        &.al, &.er, &.kw { font-weight: bold; }
-        &.co             { font-style: italic; }
+@media(min-width: $container-width) {
+    div.sourceCode {
+        text-align: center;
+        pre {
+            min-width: $container-width;
+            text-align: left;
+        }
     }
 }
