Merriweather and Inconsolata

--- a/in/global.scss
+++ b/in/global.scss
@@ -53,6 +53,10 @@ blockquote {
     }
 }
 
+code, pre {
+    font-family: Inconsolata, monospace;
+}
+
 div.sourceCode {
 
     box-sizing: border-box;
