fix right margin on code blocks

--- a/in/global.scss
+++ b/in/global.scss
@@ -60,7 +60,6 @@ code, pre {
 div.sourceCode {
 
     box-sizing: border-box;
-    padding: 0 1.5em;
 
     pre {
         box-sizing: border-box;
@@ -69,7 +68,7 @@ div.sourceCode {
         border: 3px solid #f1f1f1;
         border-radius: 5px;
         padding: 1em;
-        margin: 0;
+        margin: 0 1.5em;
         word-break: break-all;
         line-height: 1.2em;
 
